--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
 
                 <div class="box">
                     <h3> <span>name : </span> Dran Leynard P. Gamoso </h3>
-                    <h3> <span>age : </span> 20-year-old </h3>
+                    <h3> <span>age : </span> 21-year-old </h3>
                     <h3> <span>email : </span> dldoesvisuals@gmail.com </h3>
                     <h3> <span>address : </span> Ilocos Sur, Philippines - 2710 </h3>
                 </div>
@@ -53,15 +53,15 @@
                     <h3> <span>Student : </span> BSIT Student </h3>
                     <h3> <span>skill : </span> Beginner Java Programmer </h3>
                     <h3> <span>experience : </span> 1 year </h3>
-                    <h3> <span>language : </span> Tagalog, English, Iloco </h3>
+                    <h3> <span>language : </span> PHP, Java, Python, Dart, JavaScript, C#, </h3>
                 </div>
 
             </div>
 
             <pre>
-                <a href="#" download>
+                <!-- <a href="#" download>
 <button onclick="doSomething()" style="background-color:crimson;padding: 8px;color:#ffffff;border-radius:5px; cursor:pointer; font-size: 20px; font-family: 'Poppins', sans-serif">  Download CV    <i class="fas fa-download" style="font-size: 30apx" style='align-items:center;';></i>  </button>
-                </a>
+                </a> -->
                 <pre>
                 
                 <p id="test"></p>
@@ -78,17 +78,20 @@
 
             <div class="box">
                 <h3>Bio</h3>
-                <p>Hi, my name is Dran Leynard P. Gamoso. Most people call me DL. I'm currently 20 years old and living in Candon City, Ilocos Sur, Philippines.
+                <p>
+                    Hi, my name is Dran Leynard P. Gamoso. Most people call me DL. I'm currently 20 years old and living in Candon City, Ilocos Sur, Philippines.
                     I'm a second-year student studying to become a software engineer.
                     I like to watch all things related to design; games, highlights, and project design tutorials. 
-                    I also have adobe photoshop and illustrator skills. </p>
+                    I also have adobe photoshop and illustrator skills. 
+                </p>
             </div>
 
             <div class="box">
                 <h3>Studies</h3>
-                <p>I learned basic HTML in 6th grade, but that was just the beginning of my coding career.
+                <p>
                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus distinctio obcaecati 
-                     voluptatibus iure quae modi ipsa. Eum inventore numquam dicta. I hope to become a successful software engineer.</p>
+                     voluptatibus iure quae modi ipsa. Eum inventore numquam dicta. I hope to become a successful software engineer.
+                </p>
             </div>
 
         </div>
@@ -158,7 +161,7 @@
             <i class="fas fa-graduation-cap"></i>
             <span>2022 - Present</span>
             <h3>BSIT- Web dev</h3>
-            <p>2nd year College Student with a Course of BSIT-Web dev at
+            <p>3rd year College Student with a Course of BSIT-Web dev at
                 Ilocos Sur Polytechnic State College and expected to Graduate at 2025</p>
         </div>
     </div>
