removed some space on portfolio.html

--- a/portfolio.html
+++ b/portfolio.html
@@ -160,8 +160,8 @@
 
     <div class="box-container">
 
-        <div class="box">
-        </div>
+        <!-- <div class="box">
+        </div> -->
 
         <div class="box">
             <img src="images/Shirts/DTB.jpg" alt="">
