--- a/contact.html
+++ b/contact.html
@@ -71,7 +71,7 @@
         </div>
 
         <div class="share">
-            <a href="https://www.facebook.com/DLuvsss/" target="_blank" class="fab fa-facebook-f"> </a>
+            <a href="https://www.facebook.com/DLuvvsssU" target="_blank" class="fab fa-facebook-f"> </a>
             <a href="https://www.instagram.com/_youngdl/" target="_blank" class="fab fa-instagram"></a>
             <a href="https://github.com/DL23727272" target="_blank" class="fab fa-github"></a>
         </div>
