added some links on index.html

--- a/index.html
+++ b/index.html
@@ -339,8 +339,8 @@
 
     <div class="box-container">
 
-        <div class="box">
-        </div>
+        <!-- <div class="box">
+        </div> -->
 
         <div class="box">
             <img src="images/Shirts/DTB.jpg" alt="">
@@ -454,10 +454,9 @@
         </div>
 
         <div class="share">
-            <a href="https://www.facebook.com/Cmedsss" target="_blank" class="fab fa-facebook-f"> </a>
-            <a href="https://twitter.com/TianMeds" target="_blank" class="fab fa-twitter"></a>
-            <a href="https://www.instagram.com/tiaanmeds/" target="_blank" class="fab fa-instagram"></a>
-            <a href="https://github.com/TianMeds" target="_blank" class="fab fa-github"></a>
+            <a href="https://www.facebook.com/DLuvvsssU" target="_blank" class="fab fa-facebook-f"> </a>
+            <a href="https://www.instagram.com/_youngdl/" target="_blank" class="fab fa-instagram"></a>
+            <a href="https://github.com/DL23727272" target="_blank" class="fab fa-github"></a>
         </div>
 
     </div>
