--- a/portfolio.html
+++ b/portfolio.html
@@ -59,6 +59,15 @@
                 <a href="https://paesanosystem.000webhostapp.com/index.php" target="_blank">View Website</a>
             </div>
         </div>
+        <div class="box">
+            <img src="images/twitter.png" alt="">
+            <div class="content">
+                <h3>PROJECT 03</h3>
+                <h3>X Clone</h3>
+                <p>Cloned X/Twitter and it is responsive</p>
+                <a href="https://dl23727272.github.io/Twitter-Clone/" target="_blank">View Website</a>
+            </div>
+        </div>
 
         <div class="box">
         </div>
