added some text on portfolio.html

--- a/portfolio.html
+++ b/portfolio.html
@@ -46,7 +46,7 @@
             <div class="content">
                 <h3>PROJECT 01</h3>
                 <h3>Online Hotel Booking System</h3>
-                <p>I made this system for my final project on my subject abroad in Politeknik Negeri Malang, Indonesia.</p>
+                <p>I made this system for my final project on my subject abroad in Politeknik Negeri Malang, Indonesia. with senior frontend developer Mark Jeriel Cabalbag</p>
                 <a href="https://helioshotel.000webhostapp.com/login.php" target="_blank">View Website</a>
             </div>
         </div>
@@ -55,7 +55,7 @@
             <div class="content">
                 <h3>PROJECT 02</h3>
                 <h3>Paesano Appointment System</h3>
-                <p>We made this system for our final project in 3rd year first sem.</p>
+                <p>We made this system for our final project in 3rd year first sem. with senior frontend developer Mark Jeriel Cabalbag</p>
                 <a href="https://paesanosystem.000webhostapp.com/index.php" target="_blank">View Website</a>
             </div>
         </div>
