--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
                     <h3> <span>Student : </span> BSIT Student </h3>
                     <h3> <span>skill : </span> Beginner Java Programmer </h3>
                     <h3> <span>experience : </span> 1 year </h3>
-                    <h3> <span>language : </span> PHP, Java, Python, Dart, JavaScript, C#, </h3>
+                    <h3> <span>language : </span> PHP, Java, Python, Dart, JavaScript, C#, Kotlin</h3>
                 </div>
 
             </div>
