--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
                     <h3> <span>Student : </span> BSIT Student </h3>
                     <h3> <span>skill : </span>Graphic Designer, Fullstack Dev </h3>
                     <h3> <span>experience : </span>5 years </h3>
-                    <h3> <span>language : </span> PHP, Java, Python, Dart, JavaScript, C#, Kotlin</h3>
+                    <h3> <span>language : </span> PHP, Java, Dart, JavaScript, C#, Kotlin</h3>
                     <h3> <span>Frameworks : </span>Bootstrap, Laravel</h3>
                 </div>
 
