--- a/home.html
+++ b/home.html
@@ -33,7 +33,7 @@
 <section class="home">
 
     <div class="image">
-        <img src="images/DLweb.jpg" alt="">
+        <img src="images/mepic.jpg" alt="">
     </div>
 
     <div class="content">
