--- a/portfolio.html
+++ b/portfolio.html
@@ -82,7 +82,7 @@
             <img src="images/library.jpg" alt="">
             <div class="content">
                 <h3>PROJECT 05</h3>
-                <h3>Starbuckz</h3>
+                <h3>LMS</h3>
                 <p>This is a Library Management System I made for my client</p>
                 <a href="https://lms-bydl.000webhostapp.com/" target="_blank">View Website</a>
             </div>
