--- a/portfolio.html
+++ b/portfolio.html
@@ -60,7 +60,7 @@
             </div>
         </div>
 
-        <div class="box">
+        <!-- <div class="box">
             <img src="images/twitter.png" alt="">
             <div class="content">
                 <h3>PROJECT 03</h3>
@@ -68,11 +68,11 @@
                 <p>Cloned X/Twitter and it is responsive</p>
                 <a href="https://dl23727272.github.io/Twitter-Clone/" target="_blank">View Website</a>
             </div>
-        </div>
+        </div> -->
         <div class="box">
             <img src="images/star.jpg" alt="">
             <div class="content">
-                <h3>PROJECT 04</h3>
+                <h3>PROJECT 03</h3>
                 <h3>Starbuckz</h3>
                 <p>Created a starbucks web page with Mark Jeriel Cabalbag(Frontend)</p>
                 <a href="https://heliosclo.000webhostapp.com/" target="_blank">View Website</a>
@@ -81,13 +81,39 @@
         <div class="box">
             <img src="images/library.jpg" alt="">
             <div class="content">
-                <h3>PROJECT 05</h3>
-                <h3>LMS</h3>
+                <h3>PROJECT 04</h3>
+                <h3>Library Management System</h3>
                 <p>This is a Library Management System I made for my client</p>
                 <a href="https://lms-bydl.000webhostapp.com/" target="_blank">View Website</a>
             </div>
         </div>
-
+        <div class="box">
+            <img src="images/beauty.png" alt="">
+            <div class="content">
+                <h3>PROJECT 05</h3>
+                <h3>Beauty Pageant Tabulation System</h3>
+                <p>Beauty Pageant Tabulation System for my client</p>
+                <a href="http://personatab.atwebpages.com/" target="_blank">View Website</a>
+            </div>
+        </div>
+        <div class="box">
+            <img src="images/feutech1.png" alt="">
+            <div class="content">
+                <h3>PROJECT 06</h3>
+                <h3>E-commerce system</h3>
+                <p>An E-commerce system for my client from FeuTech</p>
+                <a href="http://daily-grindph.onlinewebshop.net/" target="_blank">View Website</a>
+            </div>
+        </div>
+        <div class="box">
+            <img src="images/tabulation.jpg" alt="">
+            <div class="content">
+                <h3>PROJECT 07</h3>
+                <h3>Tabulation System</h3>
+                <p>This is a Tabulation System for my capstone project</p>
+                <a href="http://personatab.atwebpages.com/" target="_blank">View Website</a>
+            </div>
+        </div>
 
         
 </div>
