--- a/portfolio.html
+++ b/portfolio.html
@@ -150,7 +150,7 @@
             </div>
         </div>
 
-        <div class="box">
+        <!-- <div class="box">
             <img src="images/Y2k Love.jpg" alt="">
             <div class="content">
                 <h3>Design 04</h3>
@@ -165,7 +165,7 @@
                 <p>using adobe illustrator</p>
                 <a href="https://drive.google.com/drive/folders/17h0tT5LjBLn8OifLcNxhcCFDLHVMehRD?usp=sharing" target="_blank">Open Portfolio</a>
             </div>
-        </div>
+        </div> -->
 
     </div>
 
@@ -240,7 +240,7 @@
                 
             </div>
         </div>
-        <div class="box">
+        <!-- <div class="box">
             <img src="images/Shirts/Rodman.jpg" alt="">
             <div class="content">
                 <h3>Shirt Designs 04</h3>
@@ -269,7 +269,7 @@
                 target="_blank">Preview Designs</a>
                 
             </div>
-        </div>
+        </div> -->
 
     </div>
    
