--- a/about.html
+++ b/about.html
@@ -53,8 +53,8 @@
                     <h3> <span>Student : </span> BSIT Student </h3>
                     <h3> <span>skill : </span>Graphic Designer, Fullstack Dev </h3>
                     <h3> <span>experience : </span>5 years </h3>
-                    <h3> <span>language : </span> PHP, Java, Dart, JavaScript, C#, Kotlin</h3>
-                    <h3> <span>Frameworks : </span>Bootstrap, Laravel</h3>
+                    <h3> <span>language : </span> PHP, Java, Dart, JavaScript, C#, Kotlin, Python</h3>
+                    <h3> <span>Frameworks : </span>Bootstrap, Laravel, Xamarin, Kivy, KivyMD</h3>
                 </div>
 
             </div>
@@ -166,7 +166,7 @@
             <i class="fas fa-graduation-cap"></i>
             <span>2022 - Present</span>
             <h3>BSIT- Web dev</h3>
-            <p>3rd year College Student with a Course of BSIT-Web dev at
+            <p>4th year College Student with a Course of BSIT-Web dev at
                 Ilocos Sur Polytechnic State College and expected to Graduate at 2025</p>
         </div>
     </div>
