--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
                 <i class="fas fa-map"></i>
                 <div class="info">
                     <h3>address :</h3>
-                    <p>Ilocos Sur, Philippines - 1233</p>
+                    <p>Ilocos Sur, Philippines</p>
                 </div>
             </div>
 
