--- a/index.html
+++ b/index.html
@@ -128,7 +128,8 @@
                     I'm currently 21 years old and living in Ilocos Sur, Philippines.
                     Dean's Lister since first year.
                     During our school's CCS week, I won as a champion in the Java Programming competition.
-                    I competed in the Java Category in the 12th IT Olympics held at the University of Makati.  
+                    I competed in the Java Category in the 12th IT Olympics held at the University of Makati.
+                    Placed as Finalist-Student Category duting the SILLAG Startup Summit and Hackathon: Ilocos Sur Leg.
                 </p>
             </div>
         </div>
