--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     
                 <div class="box">
                     <h3> <span>Student : </span> BSIT Student </h3>
-                    <h3> <span>skill : </span>Graphic Designer, Fullstack Dev </h3>
+                    <h3> <span>skill : </span>Graphic Designer, Fullstack Web and Mobile Developer </h3>
                     <h3> <span>experience : </span>5 years </h3>
                     <h3> <span>language : </span> PHP, Java, Dart, JavaScript, C#, Kotlin, Python</h3>
                     <h3> <span>Frameworks : </span>Bootstrap, Laravel, Xamarin, Kivy, KivyMD</h3>
@@ -125,11 +125,10 @@
             <div class="box">
                 <h3>Studies</h3>
                 <p>
-                    I'm currently 21 years old and living in Ilocos Sur, Philippines.
-                    Dean's Lister since first year.
-                    During our school's CCS week, I won as a champion in the Java Programming competition.
-                    I competed in the Java Category in the 12th IT Olympics held at the University of Makati.
-                    Placed as Finalist-Student Category duting the SILLAG Startup Summit and Hackathon: Ilocos Sur Leg.
+                    I am currently 21 years old and live in Ilocos Sur, Philippines.
+                    During our school's CCS week, I won the Java Programming Competition (S.Y 2022-2023 & S.Y 2023-2024).
+                    I competed in the Java Category in the 12th IT Olympics, hosted at the University of Makati.
+                    Finalist-Student Category at the SILLAG Startup Summit and Hackathon: Ilocos Sur Leg, hosted at University of Northern Philippines.
                 </p>
             </div>
         </div>
@@ -204,8 +203,10 @@
             <i class="fas fa-graduation-cap"></i>
             <span>2021 - Present</span>
             <h3>BSIT- Web dev</h3>
-            <p>4th year College Student with a Course of BSIT-Web dev at <br>
-                Ilocos Sur Polytechnic State College and expected to Graduate at 2025</p>
+            <p>
+                Fourth-year college student taking a BSIT-Web development program at
+                Ilocos Sur Polytechnic State College and was an International Exchange Student at Politeknik Negeri Malang in Indonesia for two subjects.
+            </p>
         </div>
     </div>
 
