--- a/about.html
+++ b/about.html
@@ -103,79 +103,8 @@
 
 <!-- about section ends -->
 
-<!-- skills section starts  -->
 
-<section class="skills">
 
-    <h1 class="heading"> <span>my</span> skills </h1>
-
-    <div class="box-container">
-        <div class="box">
-            <img src="images/icon-1.png">
-            <h3>html</h3>
-        </div>
-        <div class="box">
-            <img src="images/icon-2.png">
-            <h3>Java</h3>
-        </div>
-        <div class="box">
-            <img src="images/icon-5.png">
-            <h3>Visual Studio Code</h3>
-        </div>
-        <div class="box">
-            <img src="images/icon-6.png">
-            <h3>Eclipse</h3>
-        </div>
-        <div class="box">
-            <img src="images/icon-9.png">
-            <h3>Adobe Illustrator</h3>
-        </div>
-        <div class="box">
-            <img src="images/icon-8.png">
-            <h3>Photoshop</h3>
-        </div>
-    </div>
-
-</section>
-
-<!-- skills section ends -->
-
-<!-- education section starts  -->
-
-<section class="education">
-
-    <h1 class="heading"> <span>my</span> education </h1>
-
-    <div class="box-container">
-
-        <div class="box">
-            <i class="fas fa-graduation-cap"></i>
-            <span>2016 - 2019</span>
-            <h3>Junior High School Graduate</h3>
-            <p>Saint Joseph's Institute Inc. at Candon City, Ilocos Sur, Philippines.</p>
-        </div>
-
-        <div class="box">
-            <i class="fas fa-graduation-cap"></i>
-            <span>2020 - 2021</span>
-            <h3>Senior High School Graduate</h3>
-            <p>Saint Joseph's Institute Inc. at Candon City, Ilocos Sur, Philippines.</p>
-        </div>
-
-        <div class="box">
-            <i class="fas fa-graduation-cap"></i>
-            <span>2022 - Present</span>
-            <h3>BSIT- Web dev</h3>
-            <p>
-                Fourth-year college student taking a BSIT-Web development program at
-                Ilocos Sur Polytechnic State College and was an International Exchange Student at Politeknik Negeri Malang in Indonesia for two subjects.
-            </p>
-        </div>
-    </div>
-
-</section>
-
-<!-- education section ends -->
 
 <!-- Awards section starts  -->
 
@@ -259,7 +188,30 @@
                     of the Ilocos Sur Polytechnic State College College of Computing Studies Sta. Maria Campus and Politeknik Negeri Malang, Indonesia (POLINEMA) during the First Semester, Academic Year 2022-2023.</p>
             </div>
         </div>
-     
+        <div class="box">
+            <img src="Awards/9.jpg" alt="">
+            <div class="content">
+                <h3>Award 09</h3>
+                <h3>Machine Learning</h3>
+                <p style="font-size: 15px;">attended the online seminar titled "TECHNOLOGY STACK" under the topic Machine Learning, conducted by the College of Computing Studies, Ilocos Sur Polytechnic State College - Sta. Maria Campus on April 19, 2025.</p>
+            </div>
+        </div>
+        <div class="box">
+            <img src="Awards/10.jpg" alt="">
+            <div class="content">
+                <h3>Award 10</h3>
+                <h3>Open Source NAT</h3>
+                <p style="font-size: 15px;">attended the online seminar titled "Technology Stack" under the topic Open Source NAT conducted by the College of Computing Studies, Ilocos Sur Polytechnic State College - Sta. Maria Campus on April 19, 2025.</p>
+            </div>
+        </div>
+        <div class="box">
+            <img src="Awards/11.jpg" alt="">
+            <div class="content">
+                <h3>Award 11</h3>
+                <h3>ReactJS</h3>
+                <p style="font-size: 15px;">attended the online seminar titled "Technology Stack" under the topic ReactJS conducted by the College of Computing Studies, Ilocos Sur Polytechnic State College - Sta. Maria Campus on April 19, 2025.</p>
+            </div>
+        </div>
 
         
     </div>
@@ -268,6 +220,157 @@
 </section>
 
 <!-- Awards section ends -->
+
+
+
+
+<!-- skills section starts  -->
+
+<section class="skills">
+
+    <h1 class="heading"> <span>my</span> skills </h1>
+
+    <div class="box-container">
+        <div class="box">
+            <img src="images/icon-1.png">
+            <h3>html</h3>
+        </div>
+        <div class="box">
+            <img src="images/icon-2.png">
+            <h3>Java</h3>
+        </div>
+        <div class="box">
+            <img src="images/icon-5.png">
+            <h3>Visual Studio Code</h3>
+        </div>
+        <div class="box">
+            <img src="images/icon-6.png">
+            <h3>Eclipse</h3>
+        </div>
+        <div class="box">
+            <img src="images/icon-9.png">
+            <h3>Adobe Illustrator</h3>
+        </div>
+        <div class="box">
+            <img src="images/icon-8.png">
+            <h3>Photoshop</h3>
+        </div>
+        <div class="box">
+            <img src="images/icon-10.png">
+            <h3>Php</h3>
+        </div>
+        <div class="box">
+            <img src="images/icon-11.png">
+            <h3>Flutter</h3>
+        </div>
+        <div class="box">
+            <img src="images/icon-12.png">
+            <h3>Dart</h3>
+        </div>
+        <div class="box">
+            <img src="images/icon-13.png">
+            <h3>JavaScript</h3>
+        </div>
+        <div class="box">
+            <img src="images/icon-14.png">
+            <h3>C#</h3>
+        </div>
+        <div class="box">
+            <img src="images/icon-15.png">
+            <h3>Kotlin</h3>
+        </div>
+        <div class="box">
+            <img src="images/icon-16.png">
+            <h3>Python</h3>
+        </div>
+        <div class="box">
+            <img src="images/icon-17.png">
+            <h3>Bootstrap</h3>
+        </div>
+        <div class="box">
+            <img src="images/icon-18.png">
+            <h3>Laravel</h3>
+        </div>
+        <div class="box">
+            <img src="images/icon-19.png">
+            <h3>Xamarin</h3>
+        </div>
+        <div class="box">
+            <img src="images/icon-20.png">
+            <h3>Kivy</h3>
+        </div>
+        <div class="box">
+            <img src="images/icon-21.png">
+            <h3>Flutter</h3>
+        </div>
+        <div class="box">
+            <img src="images/icon-22.png">
+            <h3>SQL</h3>
+        </div>
+        <div class="box">
+            <img src="images/icon-23.png">
+            <h3>SweetAlert</h3>
+        </div>
+        <div class="box">
+            <img src="images/icon-24.png">
+            <h3>JQuery</h3>
+        </div>
+        <div class="box">
+            <img src="images/icon-25.png">
+            <h3>Fontawesome</h3>
+        </div>
+        <div class="box">
+            <img src="images/icon-26.png">
+            <h3>chartjs</h3>
+        </div>
+        <div class="box">
+            <img src="images/icon-27.png">
+            <h3>ReactJS</h3>
+        </div>
+    </div>
+
+</section>
+
+<!-- skills section ends -->
+
+<!-- education section starts  -->
+
+<section class="education">
+
+    <h1 class="heading"> <span>my</span> education </h1>
+
+    <div class="box-container">
+
+        <div class="box">
+            <i class="fas fa-graduation-cap"></i>
+            <span>2016 - 2019</span>
+            <h3>Junior High School Graduate</h3>
+            <p>Saint Joseph's Institute Inc. at Candon City, Ilocos Sur, Philippines.</p>
+        </div>
+
+        <div class="box">
+            <i class="fas fa-graduation-cap"></i>
+            <span>2020 - 2021</span>
+            <h3>Senior High School Graduate</h3>
+            <p>Saint Joseph's Institute Inc. at Candon City, Ilocos Sur, Philippines.</p>
+        </div>
+
+        <div class="box">
+            <i class="fas fa-graduation-cap"></i>
+            <span>2022 - Present</span>
+            <h3>BSIT- Web dev</h3>
+            <p>
+                Fourth-year college student taking a BSIT-Web development program at
+                Ilocos Sur Polytechnic State College and was an International Exchange Student at Politeknik Negeri Malang in Indonesia for two subjects.
+            </p>
+        </div>
+    </div>
+
+</section>
+
+<!-- education section ends -->
+
+
 
 </body>
 </html>
