--- a/home.html
+++ b/home.html
@@ -40,7 +40,7 @@
     <div class="content">
         <h3>Hi, I am DL </h3>
         <p>A 22-year's-old BSIT Student based in Ilocos Sur, Philippines.</p>
-        <span>Freelance Graphic Designer and Fullstack Web and Mobile Developer</span>
+        <span>Freelance Graphic Designer and Fullstack Web and Mobile Application Developer</span>
         
         <pre>
         <a href="about.html">
