--- a/portfolio.html
+++ b/portfolio.html
@@ -133,6 +133,15 @@
                 <a href="http://mis-items.personatab.com/" target="_blank">View Website</a>
             </div>
         </div>
+        <div class="box">
+            <img src="images/psycho.jpg" alt="">
+            <div class="content">
+                <h3>PROJECT 09</h3>
+                <h3>ISPSC System 03</h3>
+                <p>I created this system during my OJT at MIS-ISPSC Santa Maria Campus for the new Department of Psychology.</p>
+                <a href="http://ispsc.personatab.com/" target="_blank">View Website</a>
+            </div>
+        </div>
 
         
 </div>
