--- a/portfolio.html
+++ b/portfolio.html
@@ -142,6 +142,42 @@
                 <a href="http://ispsc.personatab.com/" target="_blank">View Website</a>
             </div>
         </div>
+        <div class="box">
+            <img src="images/python-1.jpg" alt="">
+            <div class="content">
+                <h3>PROJECT 10</h3>
+                <h3>Todo-App</h3>
+                <p>I created this todo python application as my project requirement.</p>
+                <!-- <a href="http://ispsc.personatab.com/" target="_blank">View Website</a> -->
+            </div>
+        </div>
+        <div class="box">
+            <img src="images/python-2.jpg" alt="">
+            <div class="content">
+                <h3>PROJECT 11</h3>
+                <h3>tricycle at your service</h3>
+                <p>I created this booking python application for the tricycle drivers at santa maria, ilocos sur.</p>
+                <!-- <a href="http://ispsc.personatab.com/" target="_blank">View Website</a> -->
+            </div>
+        </div>
+        <div class="box">
+            <img src="images/python-3.jpg" alt="">
+            <div class="content">
+                <h3>PROJECT 12</h3>
+                <h3>Grocery List APp</h3>
+                <p>I created this grocery python application for the users to list their grocery.</p>
+                <!-- <a href="http://ispsc.personatab.com/" target="_blank">View Website</a> -->
+            </div>
+        </div>
+        <div class="box">
+            <img src="images/C.jpg" alt="">
+            <div class="content">
+                <h3>PROJECT 13</h3>
+                <h3>Portfolio APp</h3>
+                <p>I created this portolio application using C# programming lanuage with xaml.</p>
+                <!-- <a href="http://ispsc.personatab.com/" target="_blank">View Website</a> -->
+            </div>
+        </div>
 
         
 </div>
