--- a/index.html
+++ b/index.html
@@ -246,6 +246,42 @@
                 <p style="font-size: 15px;">attended the online seminar titled "Technology Stack" under the topic ReactJS conducted by the College of Computing Studies, Ilocos Sur Polytechnic State College - Sta. Maria Campus on April 19, 2025.</p>
             </div>
         </div>
+        <div class="box">
+            <img src="Awards/12.jpg" alt="">
+            <div class="content">
+                <h3>Award 12</h3>
+                <h3>simplilearn SkillUP
+                    CERTIFICATE OF
+                    COMPLETION</h3>
+                <p style="font-size: 12px;">
+                    successfully completed the online course:
+                    Introduction to HTML
+                    This professional has demonstrated initiative and a commitment to deepening their skills and
+                    their career.
+                </p>
+            </div>
+        </div>
+        <div class="box">
+            <img src="Awards/13.jpg" alt="">
+            <div class="content">
+                <h3>Award 13</h3>
+                <h3>Secure Data Privacy</h3>
+                <p style="font-size: 14px;">
+                    attended the 4-hour Webinar on Upskilling in the 21st Century for Global Competitiveness with Secure Data Privacy by the DICT Region 2 conducted on February 8, 2025 from 8:00 AM to 12:00 PM Via Zoom Meeting Platform.
+                </p>
+            </div>
+        </div>
+        <div class="box">
+            <img src="Awards/14.jpg" alt="">
+            <div class="content">
+                <h3>Award 14</h3>
+                <h3>Data Analytics for Smarter Decision-Making</h3>
+                <p style="font-size: 10px;">
+                    successfully participating in the three (3) hour training program entitled Data Analytics for Smarter Decision-Making
+                    conducted by the ICT Literacy and Competency Development Bureau through DICT Nueva Ecija held on February 22, 2025 via online conferencing.
+                </p>
+            </div>
+        </div>
 
         
     </div>
@@ -513,6 +549,42 @@
                 <h3>ISPSC System 03</h3>
                 <p>I created this system during my OJT at MIS-ISPSC Santa Maria Campus for the new Department of Psychology.</p>
                 <a href="http://ispsc.personatab.com/" target="_blank">View Website</a>
+            </div>
+        </div>
+        <div class="box">
+            <img src="images/python-1.jpg" alt="">
+            <div class="content">
+                <h3>PROJECT 10</h3>
+                <h3>Todo-App</h3>
+                <p>I created this todo python application as my project requirement.</p>
+                <!-- <a href="http://ispsc.personatab.com/" target="_blank">View Website</a> -->
+            </div>
+        </div>
+        <div class="box">
+            <img src="images/python-2.jpg" alt="">
+            <div class="content">
+                <h3>PROJECT 11</h3>
+                <h3>tricycle at your service</h3>
+                <p>I created this booking python application for the tricycle drivers at santa maria, ilocos sur.</p>
+                <!-- <a href="http://ispsc.personatab.com/" target="_blank">View Website</a> -->
+            </div>
+        </div>
+        <div class="box">
+            <img src="images/python-3.jpg" alt="">
+            <div class="content">
+                <h3>PROJECT 12</h3>
+                <h3>Grocery List APp</h3>
+                <p>I created this grocery python application for the users to list their grocery.</p>
+                <!-- <a href="http://ispsc.personatab.com/" target="_blank">View Website</a> -->
+            </div>
+        </div>
+        <div class="box">
+            <img src="images/C.jpg" alt="">
+            <div class="content">
+                <h3>PROJECT 13</h3>
+                <h3>Portfolio APp</h3>
+                <p>I created this portolio application using C# programming lanuage with xaml.</p>
+                <!-- <a href="http://ispsc.personatab.com/" target="_blank">View Website</a> -->
             </div>
         </div>
 
