--- a/index.html
+++ b/index.html
@@ -282,6 +282,27 @@
                 </p>
             </div>
         </div>
+        <div class="box">
+            <img src="Awards/15.jpg" alt="">
+            <div class="content">
+                <h3>Award 15</h3>
+                <h3>On-the-Job-Trainee (OJT)</h3>
+                <p style="font-size: 15px;">
+                   Completed the 400 hours in service as On-the-Job Trainee in the MIS Office at Ilocos Sur Polytechnic State College - Main Campus.
+                </p>
+            </div>
+        </div>
+        <div class="box">
+            <img src="Awards/16.jpg" alt="">
+            <div class="content">
+                <h3>Award 16</h3>
+                <h3>Champion</h3>
+                <p style="font-size: 11px;">
+                   In recognition of Achieving CHAMPION and Impressive Performance during CCS WEEK 2025 with a theme "Tech Beyond Boundaries: Fusing Innovation, Sports, Culture, and 
+                   IT Skills for a Dynamic Future". Your dedication, creativity, and teamwork have set a remarkable standard, demonstrating excellence in IT Skills WEB DESIGN CATEGORY.
+                </p>
+            </div>
+        </div>
 
         
     </div>
@@ -326,10 +347,7 @@
             <img src="images/icon-10.png">
             <h3>Php</h3>
         </div>
-        <div class="box">
-            <img src="images/icon-11.png">
-            <h3>Flutter</h3>
-        </div>
+        
         <div class="box">
             <img src="images/icon-12.png">
             <h3>Dart</h3>
