--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DL Portfolio</title>
 
-    <link rel="shortcut icon" type="x-icon" href="favicon.jpg">
+    <link rel="icon" type="image/x-icon" href="images/logo.ico" />
     
     <!-- font awesome cdn link  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
@@ -74,7 +74,7 @@
                 <h3>Bio</h3>
                 <p>
                     Hi, my name is Dran Leynard P. Gamoso. Most people call me DL. 
-                     I'm a fourth-year student studying to become a software engineer.
+                     A Bachelor of Science in Information Technology graduate, striving to grow as a software developer.
                      I like to watch all things related to design; games, highlights, and project design tutorials. 
                      I also have adobe photoshop and illustrator skills. 
 
