--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-
+     <link rel="icon" type="image/x-icon" href="images/logo.ico" />
  
     <link rel="stylesheet" href="./css/style.css">
     <a href="./home.html"></a>
@@ -110,7 +110,7 @@
                 <h3>Bio</h3>
                 <p>
                     Hi, my name is Dran Leynard P. Gamoso. Most people call me DL. 
-                     I'm a fourth-year student studying to become a software engineer.
+                    A Bachelor of Science in Information Technology graduate, striving to grow as a software developer.
                      I like to watch all things related to design; games, highlights, and project design tutorials. 
                      I also have adobe photoshop and illustrator skills. 
 
