updated awards and education info

--- a/index.html
+++ b/index.html
@@ -308,6 +308,16 @@
                 </p>
             </div>
         </div>
+        <div class="box">
+            <img src="Awards/18.jpg" alt="">
+            <div class="content">
+                <h3>Award 18</h3>
+                <h3>Participant</h3>
+                <p style="font-size: 15px;">
+                 participating the JAVA PROGRAMMING during the 12th I.T. Skills Olympics with a theme "The IT Innovators' Gauntlet: Forging Ahead the Future of Technology."
+                </p>
+            </div>
+        </div>
 
         
     </div>
@@ -434,25 +444,25 @@
 
         <div class="box">
             <i class="fas fa-graduation-cap"></i>
-            <span>2016 - 2019</span>
+            <span>2015 - 2019</span>
             <h3>Junior High School Graduate</h3>
             <p>Saint Joseph's Institute Inc. at Candon City, Ilocos Sur, Philippines.</p>
         </div>
 
         <div class="box">
             <i class="fas fa-graduation-cap"></i>
-            <span>2020 - 2021</span>
+            <span>2019 - 2021</span>
             <h3>Senior High School Graduate</h3>
             <p>Saint Joseph's Institute Inc. at Candon City, Ilocos Sur, Philippines.</p>
         </div>
-        
+
         <div class="box">
             <i class="fas fa-graduation-cap"></i>
             <span>2021 - 2025</span>
             <h3>College Graduate</h3>
             <p>
-                A graduate of the BSIT-Web Development program at Ilocos Sur Polytechnic State College. 
-                Also participated in an international exchange program at Politeknik Negeri Malang in Indonesia, completing two subjects.
+               A graduate of the BSIT-Web Development program at Ilocos Sur Polytechnic State College. 
+               Also participated in an international exchange program at Politeknik Negeri Malang in Indonesia, completing two subjects.
             </p>
         </div>
     </div>
