--- a/index.html
+++ b/index.html
@@ -518,7 +518,7 @@
                 <h3>PROJECT 03</h3>
                 <h3>Starbuckz</h3>
                 <p>Created a starbucks web page with Mark Jeriel Cabalbag(Frontend)</p>
-                <a href="https://heliosclo.000webhostapp.com/" target="_blank">View Website</a>
+                <a href="https://starduck.personatab.com/" target="_blank">View Website</a>
             </div>
         </div>
         <div class="box">
