--- a/portfolio.html
+++ b/portfolio.html
@@ -22,10 +22,10 @@
 <!-- navbar section starts  -->
 
 <nav class="navbar">
-    <a href="home.html"> <i class="fas fa-home"></i> <span>home</span> </a>
-    <a href="about.html"> <i class="fas fa-user"></i> <span>about</span> </a>
-    <a href="portfolio.html"> <i class="fas fa-briefcase"></i> <span>portfolio</span> </a>
-    <a href="contact.html"> <i class="fas fa-address-book"></i> <span>contact</span> </a>
+    <a href="home"> <i class="fas fa-home"></i> <span>home</span> </a>
+    <a href="about"> <i class="fas fa-user"></i> <span>about</span> </a>
+    <a href="portfolio"> <i class="fas fa-briefcase"></i> <span>portfolio</span> </a>
+    <a href="contact"> <i class="fas fa-address-book"></i> <span>contact</span> </a>
 </nav>
 
 <!-- navbar section ends -->
@@ -165,7 +165,7 @@
             <img src="images/python-3.jpg" alt="">
             <div class="content">
                 <h3>PROJECT 12</h3>
-                <h3>Grocery List APp</h3>
+                <h3>Grocery List App</h3>
                 <p>I created this grocery python application for the users to list their grocery.</p>
                 <!-- <a href="http://ispsc.personatab.com/" target="_blank">View Website</a> -->
             </div>
@@ -334,7 +334,7 @@
 
     </div>
 
- <h1 style ="font-size: 40px"> <span style = "Color: White">Bootleg Designs</span></h1>
+ <h1 style ="font-size: 40px"> <span style = "Color: White">Shirt Designs</span></h1>
 
     <div class="box-container">
 
@@ -392,6 +392,16 @@
             <img src="images/Shirts/YoungBoy.jpg" alt="">
             <div class="content">
                 <h3>Shirt Designs 06</h3>
+                <p></p>
+                <a href="https://drive.google.com/drive/folders/1AFpFMYfsK9UQ02ADl_PJbVB6ZVSvZoMD?usp=share_link" 
+                target="_blank">Preview Designs</a>
+                
+            </div>
+        </div>
+        <div class="box">
+            <img src="images/Shirts/jake.jpg" alt="" >
+            <div class="content">
+                <h3>Shirt Designs 07</h3>
                 <p></p>
                 <a href="https://drive.google.com/drive/folders/1AFpFMYfsK9UQ02ADl_PJbVB6ZVSvZoMD?usp=share_link" 
                 target="_blank">Preview Designs</a>
