--- a/about.html
+++ b/about.html
@@ -20,10 +20,10 @@
 <!-- navbar section starts  -->
 
 <nav class="navbar">
-    <a href="home.html"> <i class="fas fa-home"></i> <span>home</span> </a>
-    <a href="about.html"> <i class="fas fa-user"></i> <span>about</span> </a>
-    <a href="portfolio.html"> <i class="fas fa-briefcase"></i> <span>portfolio</span> </a>
-    <a href="contact.html"> <i class="fas fa-address-book"></i> <span>contact</span> </a>
+    <a href="home"> <i class="fas fa-home"></i> <span>home</span> </a>
+    <a href="about"> <i class="fas fa-user"></i> <span>about</span> </a>
+    <a href="portfolio"> <i class="fas fa-briefcase"></i> <span>portfolio</span> </a>
+    <a href="contact"> <i class="fas fa-address-book"></i> <span>contact</span> </a>
 </nav>
 
 <!-- navbar section ends -->
@@ -301,7 +301,7 @@
 
 <section class="skills">
 
-    <h1 class="heading"> <span>my</span> skills </h1>
+    <h1 class="heading"> <span>my</span> tech stack </h1>
 
     <div class="box-container">
         <div class="box">
