--- a/home.html
+++ b/home.html
@@ -21,10 +21,10 @@
 <!-- navbar section starts  -->
 
 <nav class="navbar">
-    <a href="home.html"> <i class="fas fa-home"></i> <span>home</span> </a>
-    <a href="about.html"> <i class="fas fa-user"></i> <span>about</span> </a>
-    <a href="portfolio.html"> <i class="fas fa-briefcase"></i> <span>portfolio</span> </a>
-    <a href="contact.html"> <i class="fas fa-address-book"></i> <span>contact</span> </a>
+    <a href="home"> <i class="fas fa-home"></i> <span>home</span> </a>
+    <a href="about"> <i class="fas fa-user"></i> <span>about</span> </a>
+    <a href="portfolio"> <i class="fas fa-briefcase"></i> <span>portfolio</span> </a>
+    <a href="contact"> <i class="fas fa-address-book"></i> <span>contact</span> </a>
 </nav>
 
 <!-- navbar section ends -->
@@ -44,7 +44,7 @@
         <span>Freelance Graphic Designer and Fullstack Web and Mobile Application Developer</span>
         
         <pre>
-        <a href="about.html">
+        <a href="about">
         <button onclick="doSomething()" style="background-color:crimson;padding: 8px;color:#ffffff;border-radius:5px; font-size: 20px; font-family: 'Poppins', sans-serif;cursor:pointer;animation:movedown 1s linear 1;animation-delay:0.5s;visibility:hidden;animation-fill-mode:forwards">  About Me   <i class="fas fa-user" style="font-size: 30apx" style='align-items:center;';></i> </button>
         </a>
         <pre>
